2005-01-02  Sven Neumann  <sven@gimp.org>

	* etc/ps-menurc: updated PS keybindings contributed by Eric Pierce.

2005-01-02  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpsizebox.c (gimp_size_box_constructor): fixed
	position of pixel and resolution labels.

2005-01-02  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c: fixed auto-scrolling
	for left and bottom display edges. Remove the timeout on
	button-release event, some minor cleanups.

2005-01-01  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* plug-ins/jpeg/jpeg_load.c
	* plug-ins/jpeg/jpeg_load.h
	* plug-ins/jpeg/jpeg_save.c
	* plug-ins/jpeg/jpeg_save.h: removed
	
	* plug-ins/jpeg/jpeg-load.c
	* plug-ins/jpeg/jpeg-load.h
	* plug-ins/jpeg/jpeg-save.c
	* plug-ins/jpeg/jpeg-save.h: added (changing _ to -)

	* plug-ins/jpeg/Makefile.am
	* plug-ins/jpeg/jpeg.c
	* po-plug-ins/POTFILES.in: changed accordingly

2005-01-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/sparkle.c: applied patch from Shlomi Fish that
	fixes regressions in Sparkle plug-in (bug #132145).

2005-01-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/plugin-defs.pl: changed for move of JPEG plug-in.

2005-01-01  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* plug-ins/Lighting/lighting_ui.c: add a control for
	viewpoint distance.  Should finish fixing bug #4044.

2005-01-01  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* plug-ins/jpeg/Makefile.am
	* plug-ins/jpeg/NEWS
	* plug-ins/jpeg/jpeg.c
	* plug-ins/jpeg/jpeg.h
	* plug-ins/jpeg/jpeg_load.c
	* plug-ins/jpeg/jpeg_load.h
	* plug-ins/jpeg/jpeg_save.c
	* plug-ins/jpeg/jpeg_save.h: moved jpeg code into new
	dir and split up, already too large and a good bit more 
	will be needed for proper exif handling.
	
	* plug-ins/common/jpeg.c: removed

	* configure.in
	* plug-ins/Makefile.am
	* plug-ins/common/Makefile.am: changed accordingly

2005-01-01  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/tiff.c: Revert incorrect optimization from previous
	change.
