@@ -1,5 +1,10 @@
 2005-01-02  Sven Neumann  <sven@gimp.org>
 
+	* app/gui/splash.c (splash_update): fixed display of progress
+	labels in RTL environment.
+
+2005-01-02  Sven Neumann  <sven@gimp.org>
+
 	* etc/ps-menurc: updated PS keybindings contributed by Eric Pierce.
 
 2005-01-02  Sven Neumann  <sven@gimp.org>
